# burnstop

./: AGENT_CARD.md  CHANGELOG.md  CODE_OF_CONDUCT.md  COMPARISON.md  CONTRIBUTING.md  FAQ.md  LICENSE  README.md  ROADMAP.md  SECURITY.md  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md  incident.md
.github/workflows/: publish.yml  test.yml.bak
burnstop/: __init__.py  cli.py  integrations.py  pricing.py  proxy.py
docs/: demo.cast  index.html
tests/: test_smoke.py
