[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "burnstop"
version = "0.1.0"
description = "Pre-flight budget gate for AI agent runaways. Drop-in. Hard-stop before token-1. ~$0.001/check."
readme = "README.md"
authors = [{name = "Santiago Calderon"}]
license = {text = "MIT"}
requires-python = ">=3.10"
keywords = ["ai", "agent", "budget", "claude", "anthropic", "mcp", "langchain", "guardrail", "runaway", "burn"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Software Development :: Libraries",
]

[project.scripts]
burnstop = "burnstop.cli:main"

[project.urls]
Homepage = "https://mcp.mi-kernel2026.xyz/hall-of-pain/"
Issues = "https://github.com/santicalderon/burnstop/issues"
